[metadata]
name = sigx
version = attr: sigx.__version__
author = Connor Sherwood Maynes
author_email = connormaynes@gmail.com
description = Topic-pattern signal exchange with in-memory caching for late joiners
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ConnorSMaynes/sigx
license = MIT
keywords =
	topic-pattern
	topic
	signal
	event
	blinker
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5,<4
install_requires =
	refutil >=1,<2
